updated ns handling

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -48,6 +48,7 @@ nfpms:
       ./dist/srl-ndk-git_linux_amd64/srl-ndk-git: "/opt/srlinux/usr/bin/ndk-git"
     config_files:
       ./yang/ndk-git.yang: "/opt/ndk-git/yang/ndk-git.yang"
+      ./yang/ndk-git-types.yang: "/opt/ndk-git/yang/ndk-git-types.yang"
       ./yml/ndk-git.yml: "/etc/opt/srlinux/appmgr/ndk-git.yml"
     overrides:
       rpm:
