update yml file

--- a/yml/ndk-git.yml
+++ b/yml/ndk-git.yml
@@ -8,5 +8,6 @@ ndk-git:
     yang-modules:
         names: 
             - "ndk-git"
+            - "ndk-git-types"
         source-directories:
             - "/opt/ndk-git/yang/"
